feat: allow engine to build from resource folder assets